Added:Collaboration Added

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -12,7 +12,7 @@
  	
  #Notes Status
  
- 	status.success.allabels=All Notes!!
+ 	status.success.allnotes=All Notes!!
  
 	status.success.notecreated=Note Created Successfully!!
 			 
@@ -22,7 +22,7 @@
 	
 	status.notenotfound=Note Not Found..
 	
-	status.notefound=Note Found..
+	status.success.notefound=Note Found..
 	
 #Labels Status
 
@@ -46,7 +46,9 @@
 	
 	status.success.loginunsuccess=Login Unsuccessful..
 	
-	status.success.emailverified=Email Id Verified Successfully!!
+	status.success.emailverified=Email Id Verified Successfully, !!
+	
+	status.success.tokensent=Email Id Verified, Token Sent to your mail!!
 	
 	status.success.registration=User Successfully Registered!!
 	
@@ -60,7 +62,8 @@
 	
 	status.usernotfound=User Not Found..
 	
+#Collaboration Status
 	
-	
+	status.success.collaborationdone=Collaboration Done Successfully!!
 	
 	
