--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,10 @@
 	</properties>
 
 	<dependencies>
-
+<dependency>
+	<groupId> org.elasticsearch.client</groupId>
+	<artifactId>elasticsearch-rest-high-level-client</artifactId>
+</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
 		<dependency>
 <groupId>org.springframework.boot</groupId>
