--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 	<groupId> org.elasticsearch.client</groupId>
 	<artifactId>elasticsearch-rest-high-level-client</artifactId>
 </dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.6</version>
+</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
 		<dependency>
 <groupId>org.springframework.boot</groupId>
