--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,7 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
-elasticsearch.host=http://localhost/9200
+#========Elastic Search========#
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-nodes=elasticsearch
+elasticsearch.localhost=localhost:9200
