Modified:Responses Changed

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -24,6 +24,12 @@
 	
 	status.success.notefound=Note Found..
 	
+	status.success.sortbytitle=Sorted By Title!!
+	
+	status.success.sortbydesc=Sorted By Description!!
+	
+	status.success.sortbydate=Sorted By Date!!
+	
 #Labels Status
 
 	status.success.allabels=All Labels!!
